--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Views.MainActivity"
+        <activity android:name=".views.MainActivity"
             android:noHistory="false" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,19 +21,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Views.DetialsAcvtivty"
-            android:parentActivityName=".Views.MainActivity">
+            android:name=".views.DetialsAcvtivty"
+            android:parentActivityName=".views.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Views.MainActivity" />
+                android:value=".views.MainActivity" />
         </activity>
 
         <provider
-            android:name=".DataBase.DBContentProvider"
+            android:name=".database.DBContentProvider"
             android:authorities="com.massive.popmovie"
             android:exported="false" />
 
-        <activity android:name=".Views.ReviewActivity"></activity>
+        <activity android:name=".views.ReviewActivity"></activity>
     </application>
 
 </manifest>
